@@ -1,0 +1,53 @@
+In 2011 you made 497 commits in 25 projects.
+
+Commits per weekday
+    Monday      81 **************************************************
+   Tuesday      68 ******************************************
+ Wednesday      68 ******************************************
+  Thursday      95 ***********************************************************
+    Friday      86 *****************************************************
+  Saturday      31 *******************
+    Sunday      68 ******************************************
+
+Commits per month
+       Jan       0 
+       Feb      28 ****************
+       Mar     102 ***********************************************************
+       Apr      90 ****************************************************
+       May       0 
+       Jun      91 ****************************************************
+       Jul      57 ********************************
+       Aug      15 ********
+       Sep      37 *********************
+       Oct      31 *****************
+       Nov      30 *****************
+       Dec      16 *********
+
+Lines added (+) and removed (-) per weekday
+    Monday   19461   +++++++++++++++++++++++
+   Tuesday   47770   ++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Wednesday    5311   ++++++
+  Thursday   -1949 --
+    Friday    5024   +++++
+  Saturday   24539   +++++++++++++++++++++++++++++
+    Sunday    1461   +
+
+Lines added (+) and removed (-) per month
+       Jan       0 
+       Feb    3955 ++++++++
+       Mar   26084 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+       Apr    1284 ++
+       May       0 
+       Jun    8414 ++++++++++++++++++
+       Jul   19035 +++++++++++++++++++++++++++++++++++++++++
+       Aug     604 +
+       Sep     604 +
+       Oct     285 
+       Nov   26900 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+       Dec   14452 +++++++++++++++++++++++++++++++
+
+Top 3 words in commit messages
+   updated     100 *********************************************
+        of     119 *****************************************************
+       for     131 ***********************************************************
+
