@@ -1,0 +1,53 @@
+In 2012 you made 373 commits in 32 projects.
+
+Commits per weekday
+    Monday      32 *******************
+   Tuesday      51 *******************************
+ Wednesday      52 *******************************
+  Thursday      63 **************************************
+    Friday      48 *****************************
+  Saturday      31 *******************
+    Sunday      96 ***********************************************************
+
+Commits per month
+       Jan      17 *************
+       Feb       7 *****
+       Mar      47 ************************************
+       Apr      46 ***********************************
+       May      45 **********************************
+       Jun      27 ********************
+       Jul      12 *********
+       Aug      10 *******
+       Sep      19 **************
+       Oct      54 *****************************************
+       Nov      76 ***********************************************************
+       Dec      13 **********
+
+Lines added (+) and removed (-) per weekday
+    Monday    3365 ++
+   Tuesday     -93 
+ Wednesday   66266 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+  Thursday   14275 ++++++++++++
+    Friday   18252 ++++++++++++++++
+  Saturday     947 
+    Sunday    3571 +++
+
+Lines added (+) and removed (-) per month
+       Jan   14214 +++++++++++++
+       Feb     654 
+       Mar     896 
+       Apr    4358 ++++
+       May     700 
+       Jun    -812 
+       Jul   60362 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+       Aug    1595 +
+       Sep   12481 ++++++++++++
+       Oct   13471 ++++++++++++
+       Nov    -887 
+       Dec    -449 
+
+Top 3 words in commit messages
+        of      57 ******************************
+       the      73 ***************************************
+        to     109 ***********************************************************
+
