@@ -1,0 +1,53 @@
+In 2013 you made 1669 commits in 82 projects.
+
+Commits per weekday
+    Monday     179 ***************************
+   Tuesday     382 ***********************************************************
+ Wednesday     310 ***********************************************
+  Thursday     327 **************************************************
+    Friday     364 ********************************************************
+  Saturday      32 ****
+    Sunday      75 ***********
+
+Commits per month
+       Jan      19 ****
+       Feb     120 ***************************
+       Mar     202 *********************************************
+       Apr     248 ********************************************************
+       May      30 ******
+       Jun     189 ******************************************
+       Jul      67 ***************
+       Aug     211 ***********************************************
+       Sep     261 ***********************************************************
+       Oct     105 ***********************
+       Nov      63 **************
+       Dec     154 **********************************
+
+Lines added (+) and removed (-) per weekday
+    Monday  -58377 ------
+   Tuesday  157317       ++++++++++++++++++
+ Wednesday   92555       ++++++++++
+  Thursday  227722       ++++++++++++++++++++++++++
+    Friday  449436       ++++++++++++++++++++++++++++++++++++++++++++++++++++
+  Saturday    2051       
+    Sunday   29370       +++
+
+Lines added (+) and removed (-) per month
+       Jan    1895       
+       Feb   22054       +++
+       Mar    7991       +
+       Apr   51000       ++++++++
+       May   13719       ++
+       Jun   63122       +++++++++
+       Jul  -38425 ------
+       Aug  149153       +++++++++++++++++++++++
+       Sep  336223       ++++++++++++++++++++++++++++++++++++++++++++++++++++
+       Oct  225115       +++++++++++++++++++++++++++++++++++
+       Nov    8114       +
+       Dec   60113       +++++++++
+
+Top 3 words in commit messages
+   subtree     220 *****************************************
+     Added     228 *******************************************
+        to     311 ***********************************************************
+
