@@ -1,0 +1,53 @@
+In 2014 you made 2419 commits in 78 projects.
+
+Commits per weekday
+    Monday     456 *******************************************************
+   Tuesday     486 ***********************************************************
+ Wednesday     472 *********************************************************
+  Thursday     477 *********************************************************
+    Friday     431 ****************************************************
+  Saturday      33 ****
+    Sunday      64 *******
+
+Commits per month
+       Jan      70 **********
+       Feb      86 *************
+       Mar     217 *********************************
+       Apr     298 **********************************************
+       May     231 ***********************************
+       Jun     236 ************************************
+       Jul     379 ***********************************************************
+       Aug     243 *************************************
+       Sep      91 **************
+       Oct     242 *************************************
+       Nov     160 ************************
+       Dec     166 *************************
+
+Lines added (+) and removed (-) per weekday
+    Monday   86282 +++++++++++++++++++++++++
+   Tuesday  200667 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Wednesday  180084 ++++++++++++++++++++++++++++++++++++++++++++++++++++
+  Thursday   99998 +++++++++++++++++++++++++++++
+    Friday  145583 ++++++++++++++++++++++++++++++++++++++++++
+  Saturday    2672 
+    Sunday   31792 +++++++++
+
+Lines added (+) and removed (-) per month
+       Jan   74075 ++++++++++++++++++++++++
+       Feb   45698 +++++++++++++++
+       Mar  178334 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+       Apr  116344 ++++++++++++++++++++++++++++++++++++++
+       May   36617 ++++++++++++
+       Jun   33060 ++++++++++
+       Jul   86943 ++++++++++++++++++++++++++++
+       Aug   42377 ++++++++++++++
+       Sep   22210 +++++++
+       Oct   39969 +++++++++++++
+       Nov   47105 +++++++++++++++
+       Dec   24346 ++++++++
+
+Top 3 words in commit messages
+      from     732 *******************************************************
+    commit     751 ********************************************************
+     Merge     780 ***********************************************************
+
