@@ -1,0 +1,53 @@
+In 2015 you made 1893 commits in 95 projects.
+
+Commits per weekday
+    Monday     347 ******************************************************
+   Tuesday     314 *************************************************
+ Wednesday     336 ****************************************************
+  Thursday     378 ***********************************************************
+    Friday     310 ************************************************
+  Saturday      92 **************
+    Sunday     116 ******************
+
+Commits per month
+       Jan     146 *********************************
+       Feb      96 **********************
+       Mar     138 *******************************
+       Apr     257 ***********************************************************
+       May     140 ********************************
+       Jun      94 *********************
+       Jul     208 ***********************************************
+       Aug     179 *****************************************
+       Sep     143 ********************************
+       Oct     171 ***************************************
+       Nov     165 *************************************
+       Dec     156 ***********************************
+
+Lines added (+) and removed (-) per weekday
+    Monday   18084 +
+   Tuesday  637217 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Wednesday  610886 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+  Thursday   63279 +++++
+    Friday   60684 +++++
+  Saturday    4437 
+    Sunday   19625 +
+
+Lines added (+) and removed (-) per month
+       Jan   12549 +
+       Feb  -10317 
+       Mar    7926 
+       Apr  145683 +++++++++++++
+       May  581819 +++++++++++++++++++++++++++++++++++++++++++++++++++++++
+       Jun  612715 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+       Jul   18848 +
+       Aug    5658 
+       Sep   15652 +
+       Oct    4224 
+       Nov    2267 
+       Dec   17188 +
+
+Top 3 words in commit messages
+         a     445 *****************************
+        to     786 ***************************************************
+       the     901 ***********************************************************
+
