@@ -1,0 +1,53 @@
+In 2016 you made 2221 commits in 102 projects.
+
+Commits per weekday
+    Monday     369 ****************************************************
+   Tuesday     417 ***********************************************************
+ Wednesday     398 ********************************************************
+  Thursday     338 ***********************************************
+    Friday     367 ***************************************************
+  Saturday     128 ******************
+    Sunday     204 ****************************
+
+Commits per month
+       Jan     172 *************************************
+       Feb     246 ****************************************************
+       Mar     274 ***********************************************************
+       Apr     213 *********************************************
+       May     181 **************************************
+       Jun      51 **********
+       Jul     159 **********************************
+       Aug     222 ***********************************************
+       Sep     156 *********************************
+       Oct     185 ***************************************
+       Nov     209 *********************************************
+       Dec     153 ********************************
+
+Lines added (+) and removed (-) per weekday
+    Monday   52555  +++
+   Tuesday  545082  ++++++++++++++++++++++++++++++++++
+ Wednesday  -30607 -
+  Thursday   68397  ++++
+    Friday  890009  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+  Saturday   -3025  
+    Sunday    2124  
+
+Lines added (+) and removed (-) per month
+       Jan   18325    +
+       Feb    5316    
+       Mar   29678    ++
+       Apr  568169    +++++++++++++++++++++++++++++++++++++++++++++++++++++++
+       May    8578    
+       Jun    1284    
+       Jul  566603    +++++++++++++++++++++++++++++++++++++++++++++++++++++++
+       Aug    9712    
+       Sep  -36125 ---
+       Oct   11700    +
+       Nov    6297    
+       Dec  334998    ++++++++++++++++++++++++++++++++
+
+Top 3 words in commit messages
+         a     523 *********************************
+       the     717 *********************************************
+        to     935 ***********************************************************
+
