@@ -1,0 +1,53 @@
+In 2017 you made 2216 commits in 118 projects.
+
+Commits per weekday
+    Monday     313 *************************************
+   Tuesday     339 ****************************************
+ Wednesday     378 *********************************************
+  Thursday     385 **********************************************
+    Friday     491 ***********************************************************
+  Saturday     177 *********************
+    Sunday     133 ***************
+
+Commits per month
+       Jan     184 ***********************************
+       Feb     226 *******************************************
+       Mar     305 ***********************************************************
+       Apr     146 ****************************
+       May     120 ***********************
+       Jun     129 ************************
+       Jul      75 **************
+       Aug     274 *****************************************************
+       Sep     168 ********************************
+       Oct     177 **********************************
+       Nov     206 ***************************************
+       Dec     206 ***************************************
+
+Lines added (+) and removed (-) per weekday
+    Monday   20216 +++++++
+   Tuesday  157715 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Wednesday   72366 ++++++++++++++++++++++++++
+  Thursday   12006 ++++
+    Friday   85450 +++++++++++++++++++++++++++++++
+  Saturday    -624 
+    Sunday    9424 +++
+
+Lines added (+) and removed (-) per month
+       Jan    6238                            +
+       Feb    3418                            
+       Mar -149875 ---------------------------
+       Apr  152817                            +++++++++++++++++++++++++++
+       May    5851                            +
+       Jun  175024                            +++++++++++++++++++++++++++++++
+       Jul    3804                            
+       Aug   22253                            ++++
+       Sep    1733                            
+       Oct    8275                            +
+       Nov  127645                            +++++++++++++++++++++++
+       Dec    -630                            
+
+Top 3 words in commit messages
+         a     678 **********************************
+       the     980 **************************************************
+        to    1156 ***********************************************************
+
