@@ -110,7 +110,7 @@ body {
 
 #Article li ul li a {
 	float: left;
-	margin: 0 .75em 0 0; padding: .75em 1em;
+	margin: 0 .75em .75em 0; padding: .75em 1em;
 	background: #fff; color: #333;
 	font: 60% sans-serif;
 	font-weight: bolder;
