@@ -20,6 +20,21 @@
 <div id="Article"><article><h1>History</h1>
 
 <ul>
+<li><h3>Annual git Reports</h3>
+
+<p>Since I've been using git. Generated with this
+<a href="https://gist.github.com/markusfisch/c43e32a50f833539ea0f7b8b6109320e">script</a>.</p>
+
+<ul>
+<li><a href="annuals/2017">2017</a></li>
+<li><a href="annuals/2016">2016</a></li>
+<li><a href="annuals/2015">2015</a></li>
+<li><a href="annuals/2014">2014</a></li>
+<li><a href="annuals/2013">2013</a></li>
+<li><a href="annuals/2012">2012</a></li>
+<li><a href="annuals/2011">2011</a></li>
+<li><a href="annuals/2010">2010</a></li>
+</ul></li>
 <li><h3>2011 - 2017</h3>
 
 <p>This website from 2011 until 2017.</p>
