@@ -1,5 +1,17 @@
 # History
 
+* ### Annual git Reports
+	Since I've been using git. Generated with this
+	[script](https://gist.github.com/markusfisch/c43e32a50f833539ea0f7b8b6109320e).
+
+	+ [2017](annuals/2017)
+	+ [2016](annuals/2016)
+	+ [2015](annuals/2015)
+	+ [2014](annuals/2014)
+	+ [2013](annuals/2013)
+	+ [2012](annuals/2012)
+	+ [2011](annuals/2011)
+	+ [2010](annuals/2010)
 * ### 2011 - 2017
 	This website from 2011 until 2017.
 
